# akao

./: .gitattributes  .gitignore  .mcp.json  .opencode.json  .prettierignore  ARCHITECTURAL_REFORMATION_FINAL_REPORT.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_CONSISTENCY_EVALUATION.md  DESIGN_DOCS_REFACTOR_SUMMARY.md  EMERGENCY_RECOVERY_STATUS.md  Makefile  PHASE3_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHILOSOPHY_COMPARISON_ANALYSIS.md  PHILOSOPHY_EXPANSION_SUMMARY.md  PHILOSOPHY_RULE_COVERAGE.md  PROMPT.md  README.md  SUMMARY.md  SWARM.md  VALIDATION.md  akao  build.js  build_error_log.txt  checklist.md  complete_integration_test.cpp  create_new_philosophies.sh  debug_yaml  debug_yaml.cpp  dev.js  eslint.config.js  final_validation_test.sh  fix_id_format.sh  fix_rules.sh  geo.js  install-completion.sh  jsconfig.json  (+35 more)
.acme.sh/: account.conf  acme.sh  acme.sh.env  http.header
.acme.sh/akao.io_ecc/: akao.io.cer  akao.io.conf  akao.io.csr  akao.io.csr.conf  akao.io.key  fullchain.cer
.akao/: settings.yaml
.akao/rules/: README.md  config.yaml
.akao/workflows/: cpp-security-audit.yaml
.akao_traces/: trace_akao_rule__structure_class_separation_v1_rule_executor.cpp_242_8206f2d42c9202b9.yaml  trace_akao_rule__structure_class_separation_v1_rule_executor.hpp_47_7f367a79ae6f149c.yaml  trace_akao_rule__structure_class_separation_v1_rule_registry.hpp_25_bbea1cbaa2429a60.yaml
.github/: copilot-instructions.md
.github/workflows/: playwright.yml
.opencode/: opencode.db-shm  opencode.db-wal
.well-known/acme-challenge/: test-token
artifacts/: README.md  _.yaml
artifacts/architectural-reformation/: checklist.md  plan.yaml  quality.yaml
artifacts/build-fix-testing/: checklist.md  plan.yaml  quality.yaml
artifacts/oneshot/: checklist.md  plan.yaml  quality.yaml
artifacts/revolution/: useful-legacy-parts.md
artifacts/system-cleanup/: checklist.md  completion-report.md  duplicate-functionality-report.yaml  metadata-compliance-report.yaml  naming-violations-report.yaml  plan.yaml
blueprint/: ARCHITECTURE.md  MENU.md  PHILOSOPHY.md  PLAN.md  PROMPT.md  README.md  SUMMARY.md  VALIDATION.md  check.py  cli.md  compliance_audit.md  link_report.json  plan.md
builder/: core.js  crypto.js  games.js  geo.js  hash.js  hashInfo.js  index.js  trackers.js
builder/core/: config.js  games-statics.js  hash.js  i18n.js  logger.js  routes.js
builder/games/: index.js  sync.js
builder/geo/: build.js  download.js  fix.js  hash.js  hierarchy.js  index.js  shared.js  validate.js
builders/: README.md  _.yaml
builders/akao/: _.yaml  build_engine.hpp
builders/cmake/: cmake_builder.hpp
completions/: akao-completion.bash  akao-completion.zsh
core/: _.yaml
core/engine/: _.yaml  (+3 more)
core/rule/: _.yaml
docs/: ADMIN_FEATURE_CODES_ANALYSIS.md  GEO_BUGS_FIX.md  MVP-TRACKER.md  README.md  WebAuthn-PRF-Extension.md  enhanced_yaml_library.md  swarm-workflow.md
interfaces/: _.yaml
languages/: README.md  _.yaml
legacy/: main.cpp
philosophies/: _.yaml  index.yaml
rules/: _.yaml  index.yaml
rulesets/: _.yaml  index.yaml
sandbox/: Lock.test.js  Order.js  Order.test.js  README.md  Trade.js  Trade.test.js
scan/: currencies.js  pools.js
script/: challenge-server.js  install-service.sh  setup-prod.sh  ssl.sh
scripts/: _.yaml  crawl-metaforge-items.js  phase4_cleanup.sh  phase5_production_validation.sh  validate_akao_compliance.sh
src/: index.html  test.html
test/: Makefile  final_validation.sh  run_comprehensive_test.sh  simple_validation_test.cpp  system_integration_test.cpp
test_cpp_files_1752168150069541941/: test.hpp
tests/: CMakeLists.txt  CMakeLists_old.txt  Makefile  _.yaml  real_node_test.cpp  test  test.cpp  test_runner.cpp  yaml_parser_validation.cpp
tests/cli/: cli_command_tests.cpp  cli_command_tests.hpp
tests/cli/cli-command-tests/: v1.cpp
tests/compliance/: philosophy_compliance_test.cpp  philosophy_compliance_test.hpp  self_validation_test.cpp  self_validation_test.hpp
tests/compliance/self-validation-test/: v1.cpp  v1.hpp
tests/data/: sample_config.yaml  sample_cpp.cpp  sample_python.py
tests/integration/: integration_test_suite.cpp  integration_test_suite.hpp
tests/integration/integration-test-suite/: runner.cpp
tests/performance/: performance_test_runner.cpp
tests/production/: production_validator.cpp  production_validator.hpp
tests/production/production-validator/: v1.hpp
tests/transformation/: transformation_test_runner.cpp
tests/unit/: test-runner.cpp  test_fix.cpp  universal_validator_test.cpp  universal_validator_test.hpp
tests/unit/akao-format/: v1.cpp  v1.hpp
tests/unit/core/engine/orchestrator/registry/: v1.cpp
tests/unit/core/engine/orchestrator/workflow/: v1.cpp
tests/unit/core/foundation/interfaces/inode/: v1.cpp
tests/unit/core/foundation/types/result/: v1.cpp
tests/unit/core/foundation/types/value/: v1.cpp
tests/unit/nodes/builtin/file/: test_file  v1.cpp
tests/unit/nodes/builtin/logic/: v1.cpp
tests/unit/nodes/builtin/reporter/: v1.cpp
tests/unit/nodes/builtin/yaml/: v1.cpp
tests/unit/test-runner.disabled/: v1.cpp
tests/unit/universal-validator/: v1.cpp  v1.hpp
tests/yaml/: compile_yaml_test.sh  enhanced_yaml_test.sh  phase_c_integration_test.sh  test_enhanced_yaml.cpp
tests/yaml/yaml-integration-validation/: v1.cpp
thoughts/: gun.md
tmp/: ARCHITECTURE.md  ARCHITECTURE.yaml  MENU.md  MENU.yaml  PHILOSOPHY.md  PHILOSOPHY.yaml  PLAN.FINAL.md  PLAN.md  PLAN.v2.md  PLAN.yaml  PROMPT.md  PROMPT.yaml  README.md  README.yaml  SUMMARY.md  SUMMARY.yaml  TABLEOFCONTENTS.md  brainstorming.md  check.py  check.sh  check_minimal.sh  check_simple.sh  debug.sh  debug_quantifier.cpp  debug_rule_loader  debug_rule_loader.cpp  debug_value.cpp  debug_yaml  debug_yaml.cpp  implementation_roadmap.md  link_report.json  meta_rule_validator.yaml  minimal.yaml  phase4_completion_report.md  phase5_completion_report.md  project_status_report.md  prompt.md  pure_validate_command.cpp  pure_validate_command.hpp  simple_test  (+17 more)
tools/: install.js  install.sh
universe/: README.md
(+14107 files in other folders)
